--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "outsource",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ralexand56.github.com/outsource",
+  "homepage": ".",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,9 +14,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-slick": "^0.23.4",
+    "drei": "0.0.32",
+    "firebase": "^7.14.2",
+    "history": "^5.0.0-beta.7",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^6.0.0-alpha.4",
+    "react-router-dom": "^6.0.0-alpha.4",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.25.2",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.1.4",
+    "three": "^0.116.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -40,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "@types/styled-components": "^5.0.1",
+    "gh-pages": "^2.2.0",
+    "styled-components": "^5.0.1"
   }
 }
